fixing word wrap issue

--- a/public/styles/existing-tweets.css
+++ b/public/styles/existing-tweets.css
@@ -30,7 +30,7 @@ display: flex;
   padding-bottom: 30px;
   margin-bottom: 7px;
   padding-left: 1em;
-  word-wrap: normal;
+  word-break: break-word;
   
 }
 
